Update makefile of ExampleApp to use objfw-config; prepare template for buildsys.mk

--- a/src/Resources/BuildObjGTK/Makefile
+++ b/src/Resources/BuildObjGTK/Makefile
@@ -4,7 +4,7 @@ include buildsys.mk
 include extra.mk
 
 install-extra:
-	i=%%LIBNAME%%.oc; \
+	i=ObjGTK.oc; \
 	packagesdir="${DESTDIR}$$(${OBJFW_CONFIG} --packages-dir)"; \
 	${INSTALL_STATUS}; \
 	if ${MKDIR_P} $$packagesdir && ${INSTALL} -m 644 $$i $$packagesdir/$$i; then \
@@ -14,7 +14,7 @@ install-extra:
 	fi
 
 uninstall-extra:
-	i=%%LIBNAME%%.oc; \
+	i=ObjGTK.oc; \
 	packagesdir="${DESTDIR}$$(${OBJFW_CONFIG} --packages-dir)"; \
 	if test -f $$packagesdir/$$i; then \
 		if rm -f $$packagesdir/$$i; then \
