--- a/src/Resources/BuildObjGTK/ObjGTK.oc.in
+++ b/src/Resources/BuildObjGTK/ObjGTK.oc.in
@@ -1,4 +1,4 @@
 package_format 1
 CPPFLAGS="$CPPFLAGS @OBJGTK_CPPFLAGS@"
 LIBS="-lobjgtk @OBJGTK_LIBS@ $LIBS"
-FRAMEWORK_LIBS="-framework ObjGTK @OPJGTK_LIBS@ $FRAMEWORK_LIBS"
+FRAMEWORK_LIBS="-framework ObjGTK @OBJGTK_LIBS@ $FRAMEWORK_LIBS"
