--- a/src/Resources/BuildTemplate/extra.mk.in
+++ b/src/Resources/BuildTemplate/extra.mk.in
@@ -1,5 +1,5 @@
-OBJGTK_SHARED_LIB = @OBJGTK_SHARED_LIB@
-OBJGTK_STATIC_LIB = @OBJGTK_STATIC_LIB@
-OBJGTK_FRAMEWORK = @OBJGTK_FRAMEWORK@
+%%UCLIBNAME%%_SHARED_LIB = @%%UCLIBNAME%%_SHARED_LIB@
+%%UCLIBNAME%%_STATIC_LIB = @%%UCLIBNAME%%_STATIC_LIB@
+%%UCLIBNAME%%_FRAMEWORK = @%%UCLIBNAME%%_FRAMEWORK@
 
 OBJFW_CONFIG = @OBJFW_CONFIG@
