Rename OGTKObject to OGObject and remove dependencies to GTK. Fixes #19.

--- a/src/Resources/BuildObjGTK/src/Makefile
+++ b/src/Resources/BuildObjGTK/src/Makefile
@@ -169,7 +169,7 @@ SRCS = OGTKAboutDialog.m \
 	OGTKNotebookAccessible.m \
 	OGTKNotebook.m \
 	OGTKNotebookPageAccessible.m \
-	OGTKObject.m \
+	OGObject.m \
 	OGTKOffscreenWindow.m \
 	OGTKOverlay.m \
 	OGTKPadController.m \
