Get base classes from subdirs that match the library identifier (name) [preparation for multilib support].

--- a/src/Makefile
+++ b/src/Makefile
@@ -34,6 +34,7 @@ SOURCES=ObjGTKGen.m \
 	Generator/OGTKParameter.m \
 	Generator/OGTKUtil.m \
 	Generator/OGTKMapper.m \
+	Generator/OGTKFileOperation.m \
 	Generator/OFDictionary+OGTKJsonDictionaryOfFile.m \
 	Gir2Objc.m \
 	Exceptions/OGTKIncorrectConfigException.m \
