Further step to automatic generation of makefiles. Currently still: - provides the wrong includes - misses the sources list

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,6 +35,7 @@ SOURCES=ObjGTKGen.m \
 	Generator/OGTKUtil.m \
 	Generator/OGTKMapper.m \
 	Generator/OGTKFileOperation.m \
+	Generator/OGTKPackage.m \
 	Generator/OFDictionary+OGTKJsonDictionaryOfFile.m \
 	Gir2Objc.m \
 	Exceptions/OGTKIncorrectConfigException.m \
