--- a/src/Resources/BuildTemplate/src/Makefile
+++ b/src/Resources/BuildTemplate/src/Makefile
@@ -6,7 +6,7 @@ FRAMEWORK = ${%%UCLIBNAME%%_FRAMEWORK}
 LIB_MAJOR = %%VERSIONLIBMAJOR%%
 LIB_MINOR = %%VERSIONLIBMINOR%%
 
-SRCS = %%SOURCESLIST%%
+SRCS = $(wildcard *.m)
 
 INCLUDES = ${SRCS:.m=.h} \
 	%%LIBNAME%%.h
