Add glib as dependency for all libs build with ObjGTKGen

--- a/src/Resources/BuildTemplate/configure.ac
+++ b/src/Resources/BuildTemplate/configure.ac
@@ -52,6 +52,23 @@ AS_IF([test x"$enable_static" = x"yes" -o x"$enable_shared" = x"no"], [
 	AC_SUBST(%%UCLIBNAME%%_STATIC_LIB, "lib%%LCLIBNAME%%.a")
 ])
 
+AC_ARG_WITH(gtk, AS_HELP_STRING([--with-glib=PREFIX],
+	[build with glib-2.0 in the specified prefix]))
+AS_IF([test x"$with_glib" != x"no" -a x"$with_glib" != x""], [
+       GLIB_CPPFLAGS="$GLIB_CFLAGS -I$with_glib/include"
+       GLIB_LIBS="$GLIB_LIBS -L$with_glib/lib"
+       CPPFLAGS="$CPPFLAGS -I$with_glib/include"
+       LIBS="-L$with_glib/lib $LIBS"
+       FRAMEWORK_LIBS="-L$with_glib/lib $FRAMEWORK_LIBS"
+])
+
+PKG_CHECK_MODULES(glib, [glib-2.0 >= 2.70.3], [
+	CPPFLAGS="$CPPFLAGS $glib_CFLAGS"
+	LIBS="$LIBS $glib_LIBS"
+], [
+	AC_MSG_ERROR(You need glib-2.0 >= 2.70.3 installed!)
+])
+
 %%ACARGWITH%%
 
 %%PKGCHECKMODULES%%
