Fix placeholder name

--- a/src/Resources/BuildTemplate/Template.oc.in
+++ b/src/Resources/BuildTemplate/Template.oc.in
@@ -1,4 +1,4 @@
 package_format 1
-CPPFLAGS="$CPPFLAGS @@@UCLIBNAME@@_CPPFLAGS@"
+CPPFLAGS="$CPPFLAGS @%%UCLIBNAME%%_CPPFLAGS@"
 LIBS="-l%%LCLIBNAME%% @%%UCLIBNAME%%_LIBS@ $LIBS"
 FRAMEWORK_LIBS="-framework %%LIBNAME%% @%%UCLIBNAME%%_LIBS@ $FRAMEWORK_LIBS"
