Local Makefiles: Replace wildcard by list of sources

--- a/src/Exceptions/Makefile
+++ b/src/Exceptions/Makefile
@@ -1,4 +1,9 @@
-SRCS = $(wildcard *.m)
+SRCS = OGTKDataProcessingNotImplementedException.m \
+	OGTKIncorrectConfigException.m \
+	OGTKNoGIRAPIException.m \
+	OGTKNoGIRDictException.m \
+	OGTKReceivedNilExpectedStringException.m
+
 STATIC_LIB_NOINST = lib.a
 
 include ../../buildsys.mk
