--- a/src/GIR/Makefile
+++ b/src/GIR/Makefile
@@ -1,4 +1,27 @@
-SRCS = $(wildcard *.m)
+SRCS = GIRAPI.m \
+	GIRArray.m \
+	GIRBase.m \
+	GIRClass.m \
+	GIRConstant.m \
+	GIRConstructor.m \
+	GIRDoc.m \
+	GIREnumeration.m \
+	GIRField.m \
+	GIRFunction.m \
+	GIRImplements.m \
+	GIRInclude.m \
+	GIRInterface.m \
+	GIRMember.m \
+	GIRMethod.m \
+	GIRNamespace.m \
+	GIRParameter.m \
+	GIRPrerequisite.m \
+	GIRProperty.m \
+	GIRReturnValue.m \
+	GIRType.m \
+	GIRVarargs.m \
+	GIRVirtualMethod.m
+
 STATIC_LIB_NOINST = lib.a
 
 include ../../buildsys.mk
