--- a/src/Generator/Makefile
+++ b/src/Generator/Makefile
@@ -1,4 +1,14 @@
-SRCS = $(wildcard *.m)
+SRCS = OFDictionary+OGTKJsonDictionaryOfFile.m \
+	OGTKClass.m \
+	OGTKClassWriter.m \
+	OGTKFileOperation.m \
+	OGTKLibrary.m \
+	OGTKMapper.m \
+	OGTKMethod.m \
+	OGTKPackage.m \
+	OGTKParameter.m \
+	OGTKUtil.m
+
 STATIC_LIB_NOINST = lib.a
 
 include ../../buildsys.mk
