--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,16 @@
-SUBDIRS = Exceptions Generator GIR XMLReader
+SUBDIRS = Exceptions \
+	Generator \
+	GIR \
+	XMLReader
+
 STATIC_LIB_NOINST = objgtkgen.a
-OBJS_EXTRA = Exceptions/lib.a Generator/lib.a GIR/lib.a XMLReader/lib.a
-SRCS = $(wildcard *.m)
+
+OBJS_EXTRA = Exceptions/lib.a \
+	Generator/lib.a \
+	GIR/lib.a \
+	XMLReader/lib.a
+
+SRCS = Gir2Objc.m \
+	ObjGTKGen.m
 
 include ../buildsys.mk
