Refatoring: Rename OGTKFileOperation to OGTKLibraryWriter

--- a/src/Generator/Makefile
+++ b/src/Generator/Makefile
@@ -1,7 +1,7 @@
 SRCS = OFDictionary+OGTKJsonDictionaryOfFile.m \
 	OGTKClass.m \
 	OGTKClassWriter.m \
-	OGTKFileOperation.m \
+	OGTKLibraryWriter.m \
 	OGTKLibrary.m \
 	OGTKMapper.m \
 	OGTKMethod.m \
