Refactoring: Rename OGTKPackage to OGTKTemplate.

--- a/src/Generator/Makefile
+++ b/src/Generator/Makefile
@@ -5,8 +5,8 @@ SRCS = OFDictionary+OGTKJsonDictionaryOfFile.m \
 	OGTKLibrary.m \
 	OGTKMapper.m \
 	OGTKMethod.m \
-	OGTKPackage.m \
 	OGTKParameter.m \
+	OGTKTemplate.m \
 	OGTKUtil.m
 
 STATIC_LIB_NOINST = lib.a
