Generate source lists for Makefiles (for #14), make sure source lists are sorted

--- a/Resources/BuildTemplate/src/Makefile
+++ b/Resources/BuildTemplate/src/Makefile
@@ -6,7 +6,7 @@ FRAMEWORK = ${%%UCLIBNAME%%_FRAMEWORK}
 LIB_MAJOR = %%VERSIONLIBMAJOR%%
 LIB_MINOR = %%VERSIONLIBMINOR%%
 
-SRCS = $(wildcard *.m)
+SRCS = %%CLASSFILES%%
 
 INCLUDES = ${SRCS:.m=.h} \
 	%%LIBNAME%%-Umbrella.h
