Templating: Rename placeholder 'classfiles' to 'sourcefiles'

--- a/Resources/BuildTemplate/src/Makefile
+++ b/Resources/BuildTemplate/src/Makefile
@@ -6,7 +6,7 @@ FRAMEWORK = ${%%UCLIBNAME%%_FRAMEWORK}
 LIB_MAJOR = %%VERSIONLIBMAJOR%%
 LIB_MINOR = %%VERSIONLIBMINOR%%
 
-SRCS = %%CLASSFILES%%
+SRCS = %%SOURCEFILES%%
 
 INCLUDES = ${SRCS:.m=.h} \
 	%%LIBNAME%%-Umbrella.h
