Autoconf templating: Add checking for all ObjFW library packages a library depends on. This will give meaningful errors about dependencies before compiling (for #14).

--- a/Resources/BuildTemplate/configure.ac
+++ b/Resources/BuildTemplate/configure.ac
@@ -57,6 +57,8 @@ AS_IF([$OBJFW_CONFIG --package OGObject], [AC_MSG_RESULT(yes)], [
 	AC_MSG_ERROR(You need ObjFW package OGObject installed.)
 ])
 
+%%ACOCCHECKING%%
+
 %%ACARGWITH%%
 
 %%PKGCHECKMODULES%%
