--- a/org.codeberg.objgtk.objgtkgen.yml
+++ b/org.codeberg.objgtk.objgtkgen.yml
@@ -1,5 +1,5 @@
 app-id: org.codeberg.ObjGTK.ObjGTKGen
-runtime: org.gnome.Platform//master
+runtime: org.gnome.Sdk//master
 sdk: org.gnome.Sdk//master
 sdk-extensions: ['org.freedesktop.Sdk.Extension.llvm14']
 command: objgtkgen
