One further fix for autoconf of OGObject

--- a/Resources/BuildTemplate/configure.ac
+++ b/Resources/BuildTemplate/configure.ac
@@ -53,7 +53,10 @@ AS_IF([test x"$enable_static" = x"yes" -o x"$enable_shared" = x"no"], [
 ])
 
 AC_MSG_CHECKING(for ObjFW package OGObject)
-AS_IF([$OBJFW_CONFIG --package OGObject], [AC_MSG_RESULT(yes)], [
+AS_IF([$OBJFW_CONFIG --package OGObject], [AC_MSG_RESULT(yes)
+	%%UCLIBNAME%%_CPPFLAGS="$%%UCLIBNAME%%_CPPFLAGS $($OBJFW_CONFIG --package OGObject --cppflags)"
+	%%UCLIBNAME%%_LIBS="$%%UCLIBNAME%%_LIBS $($OBJFW_CONFIG --package OGObject --libs)"
+], [
 	AC_MSG_ERROR(You need ObjFW package OGObject installed.)
 ])
 
