Add support for "package_depends_on" in *.oc files for #39

--- a/Resources/BuildTemplate/Template.oc.in
+++ b/Resources/BuildTemplate/Template.oc.in
@@ -1,4 +1,6 @@
 package_format 1
+package_depends_on OGObject
+%%OCDEPENDENCIES%%
 CPPFLAGS="$CPPFLAGS @%%UCLIBNAME%%_CPPFLAGS@"
 LIBS="-l%%LCLIBNAME%% @%%UCLIBNAME%%_LIBS@ $LIBS"
 FRAMEWORK_LIBS="-framework %%LIBNAME%% @%%UCLIBNAME%%_LIBS@ $FRAMEWORK_LIBS"
