Throw an exception in case there is no package element/tag present in the current GIR file.

--- a/src/Exceptions/Makefile
+++ b/src/Exceptions/Makefile
@@ -1,4 +1,5 @@
 SRCS = OGTKDataProcessingNotImplementedException.m \
+	OGTKGIRNoPackageException.m \
 	OGTKIncorrectConfigException.m \
 	OGTKNamespaceContainsNoClassesException.m \
 	OGTKNoGIRAPIException.m \
