Add missing information to ObjFW package based configuration (template)

--- a/Resources/BuildTemplate/Template.oc.in
+++ b/Resources/BuildTemplate/Template.oc.in
@@ -1,6 +1,7 @@
 package_format 1
 package_depends_on OGObject
 %%OCDEPENDENCIES%%
-CPPFLAGS="$CPPFLAGS @%%UCLIBNAME%%_CPPFLAGS@"
-LIBS="-l%%LCLIBNAME%% @%%UCLIBNAME%%_LIBS@ $LIBS"
-FRAMEWORK_LIBS="-framework %%LIBNAME%% @%%UCLIBNAME%%_LIBS@ $FRAMEWORK_LIBS"
+CPPFLAGS="$CPPFLAGS -I@includedir@ @%%UCLIBNAME%%_CPPFLAGS@"
+LIBS="-L@libdir@ -l%%LCLIBNAME%% @%%UCLIBNAME%%_LIBS@ $LIBS"
+FRAMEWORK_LIBS="-L@libdir@ -l%%LCLIBNAME%% @%%UCLIBNAME%%_LIBS@ $FRAMEWORK_LIBS"
+STATIC_LIBS="@libdir@/lib%%LCLIBNAME%%.a @%%UCLIBNAME%%_LIBS@ $STATIC_LIBS"
