Add Info.plist to generated libs to allow linking of Frameworks on macOS (X)

--- a/Resources/BuildTemplate/configure.ac
+++ b/Resources/BuildTemplate/configure.ac
@@ -77,5 +77,5 @@ AC_SUBST(CPPFLAGS)
 AC_SUBST(%%UCLIBNAME%%_CPPFLAGS)
 AC_SUBST(%%UCLIBNAME%%_LIBS)
 
-AC_CONFIG_FILES([buildsys.mk extra.mk %%LIBNAME%%.oc])
+AC_CONFIG_FILES([buildsys.mk extra.mk %%LIBNAME%%.oc src/Info.plist])
 AC_OUTPUT
