--- a/Resources/BuildTemplate/src/Info.plist.in
+++ b/Resources/BuildTemplate/src/Info.plist.in
@@ -7,7 +7,7 @@
 	<key>CFBundleName</key>
 	<string>@PACKAGE_NAME@</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.codeberg.objgtk.%%LCLIBNAME%%</string>
+	<string>de.devbeejohn.%%LCLIBNAME%%</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
